# OOP_lab_1

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
example/: ex.py
examples/: ex.py
my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tasks/: pair_class.py  task_1.py  task_2.py  time_class.py
tasks/taks_2/: task_2.py
tasks/task_2/: task_2.py
tests/: test_pair.py  test_pair_class.py  test_time.py  test_time_class.py
